--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "5.4.2",
-  "name": "npm",
+  "name": "npm5v",
   "description": "a package manager for JavaScript",
   "keywords": [
     "install",
