--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "5.6.0",
-  "name": "npm",
+  "name": "npm5v",
   "description": "a package manager for JavaScript",
   "keywords": [
     "install",
@@ -29,8 +29,8 @@
   },
   "main": "./lib/npm.js",
   "bin": {
-    "npm": "./bin/npm-cli.js",
-    "npx": "./bin/npx-cli.js"
+    "npm5v": "./bin/npm-cli.js",
+    "npx5v": "./bin/npx-cli.js"
   },
   "dependencies": {
     "JSONStream": "~1.3.1",
